2018-12-18  Tom Tromey  <tom@tromey.com>

	* dwarf2read.c (dwarf2_find_containing_comp_unit): Don't take
	address of sect_off.

2018-12-23  Joel Brobecker  <brobecker@adacore.com>

	GDB 8.2.1 released.

2018-12-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* riscv-tdep.c (riscv_call_arg_struct): Don't adjust size before
	assigning locations.
	(riscv_return_value): Take more care not to read/write outside of
	argument buffer.  Cast return value between the declared type and
	the abi type.

2018-12-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* riscv-tdep.c (riscv_register_reggroup_p): Save and restore fcsr,
	fflags, and frm registers.

2018-12-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* riscv-tdep.c (riscv_dwarf_reg_to_regnum): New function.
	(riscv_gdbarch_init): Register new function with gdbarch.
	* riscv-tdep.h: New enum to define RISC-V DWARF register numbers.

2018-12-21  Simon Marchi  <simon.marchi@ericsson.com>

	* minsyms.c (mst_str): New.
	(minimal_symbol_reader::record_full): Add debug output.

2018-12-21  John Baldwin  <jhb@FreeBSD.org>

	* fbsd-nat.c (fbsd_handle_debug_trap): Require pl.pl_flags to
	equal PL_FLAG_SI.
	(fbsd_nat_target::stopped_by_sw_breakpoint): Likewise.

2018-12-21  Paul Marechal  <paul.marechal@ericsson.com>

	PR gdb/23974
	* target.c (target_read_stralloc): Check for empty vector.

2018-12-21  Дилян Палаузов  <dilyan.palauzov@aegee.org>

	* top.c (print_gdb_configuration): Print "--without-python"
	if GDB was configured without Python.

2018-12-21  Andrew Burgess  <andrew.burgess@embecosm.com>

	* riscv-tdep.c (riscv_scan_prologue): Use plongest to format
	a signed offset as a string.

2018-12-21  Dave Murphy  <davem@devkitpro.org>

	* dtrace-probe.c (dtrace_static_probe_ops): Explicit zero
	initialise.
	* probe.c (any_static_probe_ops): Ditto.
	* record-btrace.c (record_btrace_thread_observer_token): Ditto.
	* stap-probe.c (stap_static_probe_ops): Ditto.
	* tui/tui-hooks.c (tui_observers_token): Ditto.